# ai-news-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
output/: .github_trending_cache.json  ai-daily-2026-02-13.md  ai-daily-2026-02-14.md  ai-daily-2026-02-15.md  ai-daily-2026-02-16.md  ai-daily-2026-02-17-en.md  ai-daily-2026-02-17.md  ai-daily-2026-02-18.md  ai-daily-2026-02-19-zh.md  ai-daily-2026-02-19.md  ai-daily-2026-02-20-en.md  ai-daily-2026-02-20-zh.md  ai-daily-2026-02-20.md  ai-daily-2026-02-21-zh.md  ai-daily-2026-02-21.md  ai-daily-2026-02-22-zh.md  ai-daily-2026-02-22.md  ai-daily-2026-02-23-zh.md  ai-daily-2026-02-23.md  ai-daily-2026-02-24-zh.md  ai-daily-2026-02-24.md  ai-daily-2026-02-25-zh.md  ai-daily-2026-02-25.md  ai-daily-2026-02-26-zh.md  ai-daily-2026-02-26.md  ai-daily-2026-02-27-zh.md  ai-daily-2026-02-27.md  ai-daily-2026-02-28-zh.md  ai-daily-2026-02-28.md  ai-daily-2026-03-01-zh.md  ai-daily-2026-03-01.md  ai-daily-2026-03-02-zh.md  ai-daily-2026-03-02.md  ai-daily-2026-03-03-zh.md  ai-daily-2026-03-03.md  ai-daily-2026-03-04-zh.md  ai-daily-2026-03-04.md  ai-daily-2026-03-05-zh.md  ai-daily-2026-03-05.md  ai-daily-2026-03-06-zh.md  (+123 more)
scripts/: clear_pg_data.py  init_db.py  run_and_push.sh  run_pipeline.py  run_scheduler.py  test_reddit.py
site/: astro.config.mjs  package-lock.json  package.json
src/: config.py  models.py
tests/: test_ai_filter.py  test_cleaner.py  test_collectors.py  test_models.py  test_publishers.py  test_reviewer.py  test_sources.py  (+1 more)
(+218 files in other folders)
