[project]
name = "ai-news-agent"
version = "1.0.0"
description = "AI 新闻聚合 Agent 系统 - 基于 LangGraph 的多 Agent 新闻采集、清洗、提取与撰稿 pipeline"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "markdown>=3.5",
    "firecrawl-py>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
prod = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "langgraph-checkpoint-postgres>=2.0",
    "apscheduler>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
